PP-8973 Return new products flag and allow update
- Return new_payment_link_journey_enabled field in product responses.
- Allow PATCH request with ``"op": "replace"`` to update the
new_payment_link_journey_enabled flag for a product.